--- a/res/layout/image_full.xml
+++ b/res/layout/image_full.xml
@@ -6,7 +6,15 @@
 
     <ImageView
         android:id="@+id/imageFull"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center" />
+
+    <Button
+        android:id="@+id/buttonDeleteImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Delete Photo" />
 
 </LinearLayout>
