--- a/res/layout/profile.xml
+++ b/res/layout/profile.xml
@@ -50,7 +50,7 @@
 <GridView 
     android:id="@+id/grid_view"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="match_parent"
     android:numColumns="auto_fit"
     android:columnWidth="90dp"
     android:horizontalSpacing="10dp"
@@ -58,12 +58,5 @@
     android:gravity="center"
     android:stretchMode="columnWidth" >
 </GridView>
-
-	<Button
-	    android:id="@+id/buttonLogout"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_gravity="center"
-	    android:text="Logout" />
 
 </LinearLayout>
